--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="el">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elite Martial Arts Academy - Transform Your Mind, Body & Spirit</title>
-    <meta name="description" content="Premier martial arts training facility offering Karate, Taekwondo, Brazilian Jiu-Jitsu, and MMA. Expert instruction for all ages and skill levels." />
-    <meta name="author" content="Elite Martial Arts Academy" />
+    <title>Redemption Martial Arts - Danger is Real But Fear is a Choice</title>
+    <meta name="description" content="Σχολές πολεμικών τεχνών που προσφέρουν μαθήματα σε F.C.S KALI, Kyokushin Karate, Savate, Jiu-Jitsu , Capoeira, MMA και Pilates. Εξειδικευμένη εκπαίδευση για όλες τις ηλικίες και τα επίπεδα." />
+    <meta name="author" content="Redemption Martial Arts" />
 
-    <meta property="og:title" content="Elite Martial Arts Academy - Transform Your Mind, Body & Spirit" />
-    <meta property="og:description" content="Premier martial arts training facility offering Karate, Taekwondo, Brazilian Jiu-Jitsu, and MMA. Expert instruction for all ages and skill levels." />
+    <meta property="og:title" content="Redemption Martial Arts" />
+    <meta property="og:description" content="Σχολές πολεμικών τεχνών που προσφέρουν μαθήματα σε F.C.S KALI, Kyokushin Karate, Savate, Jiu-Jitsu , Capoeira, MMA και Pilates. Εξειδικευμένη εκπαίδευση για όλες τις ηλικίες και τα επίπεδα." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
