--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Σχολές πολεμικών τεχνών που προσφέρουν μαθήματα σε F.C.S KALI, Kyokushin Karate, Savate, Jiu-Jitsu , Capoeira, MMA και Pilates. Εξειδικευμένη εκπαίδευση για όλες τις ηλικίες και τα επίπεδα." />
     <meta name="author" content="Redemption Martial Arts" />
 
-    <link rel="icon" type="image/png" href="/assets/logo.png" />
+    <link rel="icon" type="image/png" href="/src/assets/logo.png" />
     
     <meta property="og:title" content="Redemption Martial Arts" />
     <meta property="og:description" content="Σχολές πολεμικών τεχνών που προσφέρουν μαθήματα σε F.C.S KALI, Kyokushin Karate, Savate, Jiu-Jitsu , Capoeira, MMA και Pilates. Εξειδικευμένη εκπαίδευση για όλες τις ηλικίες και τα επίπεδα." />
