--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     <meta property="og:title" content="Redemption Martial Arts" />
     <meta property="og:description" content="Σχολές πολεμικών τεχνών που προσφέρουν μαθήματα σε F.C.S KALI, Kyokushin Karate, Savate, Jiu-Jitsu , Capoeira, MMA και Pilates. Εξειδικευμένη εκπαίδευση για όλες τις ηλικίες και τα επίπεδα." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/src/assets/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/src/assets/logo.png" />
   </head>
 
   <body>
